// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar should render 1`] = `
<DocumentFragment>
  <div
    class="Avatar__AvatarStyled-sc-1vsy2s2-0 jZYOhz"
    data-testid="Avatar"
  />
</DocumentFragment>
`;

exports[`Avatar should render with custom size 1`] = `
<DocumentFragment>
  <div
    class="Avatar__AvatarStyled-sc-1vsy2s2-0 kySuJj"
    data-testid="Avatar"
  />
</DocumentFragment>
`;

exports[`Avatar should render without shadow 1`] = `
<DocumentFragment>
  <div
    class="Avatar__AvatarStyled-sc-1vsy2s2-0 bnuliI"
    data-testid="Avatar"
  />
</DocumentFragment>
`;
